* 0.9.7 (2008-10-??):
  - LibXML adapter added
  - Backwards incompatible change: Elements with no text and multiple CDATA
    values no longer report their value as their first CDATA element. They
    report all of their CDATA nodes joined together, a-la LibXML.

* 0.9.6 (2008-10-19):
  - Ruby 1.9 compatibility
  - XMLObject no longer requires ActiveSupport. Note that proper array
    pluralization still depends on ActiveSupport's Inflector, so if it's not
    there, we just pluralize things by tacking 's' at the end.
  - XMLObject no longer tries to load Hpricot by default (too cumbersome
    to test). Use "require 'xml-object/adapters/hpricot'" to enable the
    Hpricot adapter.
  - Backwards incompatible change. For the following XML:

      <foo>
        <bar>
        <bez>
      </foo>

      <foos>Yipes!</foos>

    before:

      xml.foos => # The <foo> "array"

    now:

      xml.foos => # The <foos> element

    It proved too expensive to support that edge case, and for no good
    reason.

* 0.9.5 (2008-10-15):
  - Project renamed to XMLObject, to match project name at Rubyforge.
    The other names were taken. :(

* 0.9.0 (2008-10-15):
  - Added support for plug-able adapters
  - Backported REXML code as an adapter, added Hpricot adapter
  - Performance: XMLStruct now decorates objects lazily
  - Performance: XMLStruct uses the Hpricot adapter if possible, otherwise
    REXML as a fallback
  - API Change: XMLStruct.new is mostly delegated to the adapter, and both
    included adapters behave the same: a String is considered to be
    XML data, anything else is probed for #read and then #to_s

* 0.2.1 (2008-10-13):
  - Fixed a bug where attributes with dashes would crash the party

* 0.2.0 (2008-10-13):
  - Broke backwards compatibility
  - XMLStruct.new now returns decorated String or Array objects, so that
    access to elements, attributes, and "collection" values is consistent
  - While Strings are no longer auto-typecast to float or int, they now