@@ -1,8 +1,10 @@
 * 0.9.7 (2008-10-??):
   - LibXML adapter added
+  - JREXML "adapter" added, as well as JREXML support during tests and
+    benchmark tasks, but when under JRuby
   - Backwards incompatible change: Elements with no text and multiple CDATA
     values no longer report their value as their first CDATA element. They
-    report all of their CDATA nodes joined together, a-la LibXML.
+    report all of their CDATA nodes joined together, a-la LibXML
 
 * 0.9.6 (2008-10-19):
   - Ruby 1.9 compatibility
